--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,6 @@
-$color-principal: #136C55; 
-$color-secundario: #6C132B; 
-$blanco: #fff;
 $breakpoint-tablet: 768px;
+$colores: (
+	principal: #136C55,
+	secundario: #6C132B,
+	blanco: #fff,
+);
