--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,7 +42,7 @@ body {
 
 .principal p {
   text-align: justify;
-  text-justify: inter-word;
+  text-justify: inter-character;
 }
 
 .carousel-mod {
@@ -89,7 +89,7 @@ body {
 .btn-comprar {
   border: 2px solid #136C55;
   color: #136C55;
-  width: 50%;
+  width: 100%;
 }
 
 .btn-comprar:hover {
