--- a/css/estilos.css
+++ b/css/estilos.css
@@ -162,9 +162,37 @@ body {
   }
 }
 
+@keyframes shake {
+  0%,
+  100% {
+    transform: rotate(0deg);
+    transform-origin: 50% 100%;
+  }
+  10% {
+    transform: rotate(10deg);
+  }
+  20%,
+  40%,
+  60% {
+    transform: rotate(-10deg);
+  }
+  30%,
+  50%,
+  70% {
+    transform: rotate(10deg);
+  }
+  80% {
+    transform: rotate(-10deg);
+  }
+  90% {
+    transform: rotate(10deg);
+  }
+}
+
 .icons {
   height: 25%;
   width: 25%;
+  animation: shake 4s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite both;
 }
 
 /* /secciones */
