--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -174,9 +174,38 @@ body{
     
 }
 
+@keyframes shake {
+  0%,
+  100% {
+    transform: rotate(0deg);    
+    transform-origin: 50% 100%;
+  }
+  10% {
+    transform: rotate(10deg);
+  }
+  20%,
+  40%,
+  60% {
+    transform: rotate(-10deg);
+  }
+  30%,
+  50%,
+  70% {
+    transform: rotate(10deg);
+  }
+  80% {
+    transform: rotate(-10deg);
+  }
+  90% {
+    transform: rotate(10deg);
+  }
+}
+
 .icons{
     @include sizes(25%, 25%);
+    animation: shake 4s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
+
 
 /* /secciones */
 
