--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -95,21 +95,32 @@ body{
     max-width: 99%;
 }
 
-.btn-comprar{
-    border: 2px solid map-get($colores, principal); 
-    color: map-get($colores, principal);
-    width: 100%;
+.btn-form{
+    border: 2px solid map-get($colores, principal);
     &:hover
         {
         background-color: map-get($colores, principal);
+        color: map-get($colores, blanco);
         border: 2px solid map-get($colores, principal);
 
     }
 }
 
+.btn-comprar{
+    @extend.btn-form;
+    color: map-get($colores, principal);
+    width: 100%;
+
+}
+
 .btn-modal{
     @extend.btn-comprar;
     width: 50%
+}
+
+.btn-form-mod{
+    @extend.btn-form;
+    border: 2px solid map-get($colores, negro);
 }
 
 
