boton close form

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -122,7 +122,7 @@ body {
 }
 
 .offcanvas-btn-close:hover {
-  color: #136C55;
+  color: #6C132B;
   font-size: 1.3rem;
   background-color: #fff;
 }
